arete-macros/tests/ui/validation_errors/missing_proto_value.rs
use arete_macros::arete;

#[arete(proto)]
mod broken {}

fn main() {}
